release 0.8 (2008-06-20 or 2008-07-25)
- The following properties can be set on the client:
    Read timeout, connection timeout, chunked encoding length and 
    following redirections.
  See setter methods on com.sun.jersey.api.client.ClientConfig and
  properties on com.sun.jersey.api.client.config.ClientConfig.
- Simplified web.xml configuration when using package scanning for root
  resource classes. For package scanning the web.xml need only contain the 
  following:

        <init-param>
            <param-name>com.sun.jersey.config.property.packages</param-name>
            <param-value>*list of ';' separated package names*</param-value>
        </init-param>

  previously it was necessary to declare another <init-param> referencing the
  the PackageResourceConfig class.  
- The container SPI is improved and simplified, see JavaDoc of:
    com.sun.jersey.spi.container.ContainerRequest
    com.sun.jersey.spi.container.InBoundHeaders
    com.sun.jersey.spi.container.ContainerResponse
    com.sun.jersey.spi.container.ContainerWriter
- Removed Client.addInjectable, use the following instead:
    ClientConfig.getProviderInstances().add()
- Removed WebApplication.addInjectable, use the following instead:
    ResourceConfig.getProviderInstances().add()
- Instances of provider classes can be declared by the application by adding
  provider instances to the Set returned by the method:
    ResourceConfig.getProviderInstances()
- Modified com.sun.jersey.spi.container.{AbstractContainerRequest, 
  AbstractContainerResponse} to take WebApplication as an input parameter
  as opposed to previously taking MessageBodyContext.
- Removed com.sun.jersey.spi.container.MessageBodyContext, this is replaced
  by javax.ws.rs.ext.MessageBodyWorkers.
- com.sun.jersey.api.uri.ExtendedUriInfo can be injected.
- The annotation com.sun.jersey.api.representation.FormParam can be used
  to access form-based parameters using the same rules as other parameter-based
  annotatons.